refactor(gamma-authz): page am users via a bounded iterable and run the sync on a virtual thread